[tool.poetry]
name = "rf-explainer"
version = "1.0.0"
description = "Random Forest Explainer Toolkit"
authors = ["xRiskLab <contact.xrisklab.ai>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/xRiskLab/rf-explainer"
repository = "https://github.com/xRiskLab/rf-explainer"
keywords = ["random forest", "decision trees", "explainability", "scoring"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

packages = [
    { include = "rf_explainer", from = "src" }
]

[tool.poetry.dependencies]
matplotlib = "^3.9.2"
python = "^3.9"
numpy = "^1.19.5"
pandas = "^2.2.2"
scikit-learn = "^1.3.0"
rich = "^13.7.1"
cmap = "^0.4.0"
pydocstyle = "^6.3.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
pylint = "^3.2.6"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
